--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+.togle-box {
+    padding: 0.5rem 1rem;
+    border-width: 1px;
+    border-color: rgb(255 255 255 / 0.4);
+    border-radius: 100px;
+}
+
+.togle-box:hover {
+    background-color: rgb(255 255 255 / 0.1);
+}
