--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@
 .togle-box:hover {
     background-color: rgb(255 255 255 / 0.1);
 }
+
+/* Hide horizontal scrollbar for the mobile date pills */
+.no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari and Opera */
+}
